--- a/StarWarsApp/StarWarsApp.csproj
+++ b/StarWarsApp/StarWarsApp.csproj
@@ -62,8 +62,10 @@
   <ItemGroup>
     <Compile Include="MainActivity.cs" />
     <Compile Include="PeopleAdapter.cs" />
+    <Compile Include="PlanetsAdapter.cs" />
     <Compile Include="Resources\Resource.designer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="StarShipsActivity.cs" />
     <Compile Include="StarshipsAdapter.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -122,6 +124,11 @@
   </ItemGroup>
   <ItemGroup>
     <AndroidResource Include="Resources\layout\Starships_layout.xml">
+      <SubType>Designer</SubType>
+    </AndroidResource>
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\layout\starShips_row_layout.xml">
       <SubType>Designer</SubType>
     </AndroidResource>
   </ItemGroup>
