--- a/StarWarsApp/StarWarsApp.csproj
+++ b/StarWarsApp/StarWarsApp.csproj
@@ -60,8 +60,12 @@
     <Reference Include="System.Numerics.Vectors" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="FilmsActivity.cs" />
+    <Compile Include="FilmsAdapter.cs" />
     <Compile Include="MainActivity.cs" />
+    <Compile Include="PeopleActivity.cs" />
     <Compile Include="PeopleAdapter.cs" />
+    <Compile Include="PlanetsActivity.cs" />
     <Compile Include="PlanetsAdapter.cs" />
     <Compile Include="Resources\Resource.designer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -129,6 +133,11 @@
   </ItemGroup>
   <ItemGroup>
     <AndroidResource Include="Resources\layout\starShips_row_layout.xml">
+      <SubType>Designer</SubType>
+    </AndroidResource>
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\layout\Films_Layout.xml">
       <SubType>Designer</SubType>
     </AndroidResource>
   </ItemGroup>
