--- a/Register/Register_Login/Register_Login/Register_Login.csproj
+++ b/Register/Register_Login/Register_Login/Register_Login.csproj
@@ -20,5 +20,8 @@
     <EmbeddedResource Update="HomePage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
+    <EmbeddedResource Update="RegistrationPage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
   </ItemGroup>
 </Project>
