--- a/MvvmTutorial/MvvmTutorial/MvvmTutorial/MvvmTutorial.csproj
+++ b/MvvmTutorial/MvvmTutorial/MvvmTutorial/MvvmTutorial.csproj
@@ -22,6 +22,9 @@
     <EmbeddedResource Update="LanguagesPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
+    <EmbeddedResource Update="PicturesPage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
     <EmbeddedResource Update="SettingsPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
