Take a picture (no save)

--- a/MvvmTutorial/MvvmTutorial/MvvmTutorial.Android/MvvmTutorial.Android.csproj
+++ b/MvvmTutorial/MvvmTutorial/MvvmTutorial.Android/MvvmTutorial.Android.csproj
@@ -84,7 +84,9 @@
     <AndroidResource Include="Resources\mipmap-xxxhdpi\icon.png" />
     <AndroidResource Include="Resources\mipmap-xxxhdpi\launcher_foreground.png" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <AndroidResource Include="Resources\xml\file_paths.xml" />
+  </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\MvvmTutorial\MvvmTutorial.csproj">
       <Project>{36696E20-A424-4E8B-A2B5-D8262C421720}</Project>
