--- a/PicturesApp/PicturesApp.iOS/PicturesApp.iOS.csproj
+++ b/PicturesApp/PicturesApp.iOS/PicturesApp.iOS.csproj
@@ -5,13 +5,13 @@
     <Platform Condition=" '$(Platform)' == '' ">iPhoneSimulator</Platform>
     <ProductVersion>8.0.30703</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{E72376E8-712D-4BC6-8C99-4676E3D27F28}</ProjectGuid>
+    <ProjectGuid>{6B8332CC-4CC6-449C-8E39-F3D807FAA07C}</ProjectGuid>
     <ProjectTypeGuids>{FEACFBD2-3405-455C-9665-78FE426C6842};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
     <TemplateGuid>{6143fdea-f3c2-4a09-aafa-6e230626515e}</TemplateGuid>
     <OutputType>Exe</OutputType>
-    <RootNamespace>MvvmTutorial.iOS</RootNamespace>
+    <RootNamespace>PicturesApp.iOS</RootNamespace>
     <IPhoneResourcePrefix>Resources</IPhoneResourcePrefix>
-    <AssemblyName>MvvmTutorial.iOS</AssemblyName>
+    <AssemblyName>PicturesApp.iOS</AssemblyName>
     <MtouchEnableSGenConc>true</MtouchEnableSGenConc>
     <MtouchHttpClientHandler>NSUrlSessionHandler</MtouchHttpClientHandler>
   </PropertyGroup>
@@ -122,20 +122,17 @@
     <Reference Include="System.Numerics.Vectors" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Xam.Plugin.Media">
-      <Version>4.0.1.5</Version>
-    </PackageReference>
     <PackageReference Include="Xamarin.Forms" Version="4.3.0.908675" />
     <PackageReference Include="Xamarin.Essentials" Version="1.3.1" />
-    <PackageReference Include="sqlite-net-pcl">
-      <Version>1.6.292</Version>
+    <PackageReference Include="Xam.Plugin.Media">
+      <Version>4.0.1.5</Version>
     </PackageReference>
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.CSharp.targets" />
   <ItemGroup>
-    <ProjectReference Include="..\MvvmTutorial\MvvmTutorial.csproj">
-      <Project>{DEE7775D-0CF7-491F-A4A4-9622FDB5BF68}</Project>
-      <Name>MvvmTutorial</Name>
+    <ProjectReference Include="..\PicturesApp\PicturesApp.csproj">
+      <Project>{7AA85DF4-3A6D-4DD5-B2D9-D295CE374350}</Project>
+      <Name>PicturesApp</Name>
     </ProjectReference>
   </ItemGroup>
 </Project>
