--- a/PicturesApp/PicturesApp/PicturesApp/PicturesApp.csproj
+++ b/PicturesApp/PicturesApp/PicturesApp/PicturesApp.csproj
@@ -11,12 +11,21 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <EmbeddedResource Remove="ChangeProfilePicturePopUpPage.xaml" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Rg.Plugins.Popup" Version="1.2.0.223" />
     <PackageReference Include="sqlite-net" Version="1.6.292" />
     <PackageReference Include="sqlite-net-pcl" Version="1.6.292" />
     <PackageReference Include="Xam.Plugin.Media" Version="4.0.1.5" />
     <PackageReference Include="Xam.Plugins.Forms.ImageCircle" Version="3.0.0.5" />
     <PackageReference Include="Xamarin.Forms" Version="4.3.0.908675" />
     <PackageReference Include="Xamarin.Essentials" Version="1.3.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ApplicationDefinition Include="ChangeProfilePicturePopUpPage.xaml" />
   </ItemGroup>
 
   <ItemGroup>
